--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,19 +23,23 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
+    - name: Run Tests
+      run: mvn test
+
+    - name: List Contents of target Directory
+      run: ls -R target
+
     - name: TestForest Dashboard
   # You may pin to the exact commit or the version.
   # uses: test-summary/action@fee35d7df20790255fe6aa92cf0f6d28092ecf2f
       uses: test-summary/action@v2.2
       with:
     # Path(s) to test output file(s) to analyze
-        paths: | 
-          target/surefire-reports/*.xml
+        paths: target/surefire-reports/*.xml
     # File to write with rendered output
         output: summary.html
     # Types of tests to show in the results table
         show: failed, skipped, passed
           
 
-    - name: Run Tests
-      run: mvn test
+
